--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,20 +32,20 @@ jobs:
       run: mkdir -p ~/image-cache
     
     - name: 🔧 Try Get Cache
-    - id: image-cache
+      id: image-cache
       uses: actions/cache@v1
       with:
         path: ~/image-cache
         key: image-cache-${{ runner.os }}
 
     - name: 🔧 If Cache miss
-    - if: steps.image-cache.outputs.cache-hit != 'true'
+      if: steps.image-cache.outputs.cache-hit != 'true'
       run: |
         docker pull mcr.microsoft.com/mssql/server:2019-CU18-ubuntu-20.04
         docker save -o ~/image-cache/mssql.tar alpine
 
     - name: 🔧 If Cache hit
-    - if: steps.image-cache.outputs.cache-hit == 'true'
+      if: steps.image-cache.outputs.cache-hit == 'true'
       run: docker load -i ~/image-cache/mssql.tar
     
     - name: 🤞 Dotnet Test
