refactor: move unit tests to test folder

--- a/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
+++ b/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Web.Api\Web.Api.csproj" />
+    <ProjectReference Include="..\..\src\Web.Api\Web.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
