--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -17,10 +17,11 @@
     <ItemGroup>
         <PackageReference Include="Azure.Identity" Version="1.11.4" />
         <PackageReference Include="Carter" Version="8.2.1" />
+        <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.3.0" />
         <PackageReference Include="FluentValidation" Version="11.9.2" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
         <PackageReference Include="Mapster" Version="7.4.0" />
-        <PackageReference Include="MediatR" Version="12.3.0" />
+        <PackageReference Include="MediatR" Version="12.4.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
