--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-		<RootNamespace>Appointer.Web.Api</RootNamespace>
+		<RootNamespace>Teeitup.Web.Api</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
