--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,10 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
-        
+
+    - name: 📦 Restore .NET workloads
+      run: dotnet workload restore 
+          
     - name: 📦 Dotnet Restore
       run: dotnet restore
       
