--- a/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
+++ b/tests/Web.Api.UnitTests/Web.Api.UnitTests.csproj
@@ -4,9 +4,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <RootNamespace>Teeitup.Web.Api.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
