--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,8 +44,8 @@ jobs:
     - name: 🔧 If Cache miss
       if: steps.image-cache.outputs.cache-hit != 'true'
       run: |
-        docker pull mcr.microsoft.com/mssql/server:2019-CU31-ubuntu-20.04
-        docker save -o ~/image-cache/mssql.tar mcr.microsoft.com/mssql/server:2019-CU31-ubuntu-20.04
+        docker pull mcr.microsoft.com/mssql/server:server:2019-latest
+        docker save -o ~/image-cache/mssql.tar mcr.microsoft.com/mssql/server:2019-latest
   
     - name: 🔧 If Cache hit
       if: steps.image-cache.outputs.cache-hit == 'true'
