add worker to aspire

--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Web.Api\Web.Api.csproj"/>
+        <ProjectReference Include="..\Worker\Worker.csproj" />
     </ItemGroup>
 
 </Project>
