--- a/src/AppHost/AppHost.csproj
+++ b/src/AppHost/AppHost.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost" Version="9.1.0"/>
         <PackageReference Include="Aspire.Hosting.Azure.ServiceBus" Version="9.1.0"/>
+        <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.1.0" />
         <PackageReference Include="Aspire.Hosting.SqlServer" Version="9.0.0"/>
     </ItemGroup>
 
