--- a/src/Worker/Worker.csproj
+++ b/src/Worker/Worker.csproj
@@ -8,7 +8,13 @@
 
     <ItemGroup>
         <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.3.6" />
+        <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
         <PackageReference Include="MassTransit" Version="[8.*,9.0)" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
     </ItemGroup>
 </Project>
