--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,4 +7,14 @@
         <RootNamespace>Teeitup.Core</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="FluentValidation" Version="11.11.0"/>
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0"/>
+        <PackageReference Include="MassTransit.Abstractions" Version="8.3.7" />
+        <PackageReference Include="MediatR" Version="12.4.1"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11"/>
+        <PackageReference Include="OneOf" Version="3.0.271"/>
+        <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.3.2"/>
+    </ItemGroup>
+
 </Project>
